HelloUltraviolet/Fixtures/RejectedSource/Statements/DeferDiagnostic/Expected.uv
//! Expected diagnostic metadata for the DeferDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-3152", "diag.18.Defer")
